<resources>
    <string name="app_name">PTS_Nav_Drawer</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="satu_fragment">Fragment Satu</string>
    <string name="dua_fragment">Fragment Dua</string>
    <string name="tiga_fragment">Fragment Tiga</string>
    <string name="empat_fragment">Fragment Empat</string>
    <string name="lima_fragment">Fragment Lima</string>
    <string name="enam_fragment">Fragment Enam</string>
    <string name="satu">satu</string>
    <string name="dua">Dua</string>
    <string name="tiga">Tiga</string>
    <string name="empat">Empat</string>
    <string name="lima">Lima</string>
    <string name="enam">Enam</string>
    <string name="tujuh">Tujuh</string>
    <string name="delapan">Delapan</string>
    <string name="sembilan">Sembilan</string>
    <string name="sepuluh">Sepuluh</string>
    <string name="sebelas">Sebelas</string>
    <string name="duabelas">Dua Belas</string>
    <string name="title">Title</string>
    <string name="desc">This is my Navigation Drawer</string>
    <string name="navigation_drawer">Navigation Drawer</string>
    <string name="one">ONE</string>
    <string name="two">TWO</string>
    <string name="real">REAL</string>
</resources>
