<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Fragment.RealFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <GridLayout
                android:id="@+id/grid_awal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:columnCount="2"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="40dp">

                <androidx.cardview.widget.CardView
                    android:id="@+id/satu"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_row="0"
                    android:layout_column="0"
                    android:layout_margin="10dp"
                    app:cardBackgroundColor="@color/colorWhite"
                    app:cardCornerRadius="4dp">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="100dp"
                            android:layout_height="100dp"
                            android:layout_gravity="center"
                            android:src="@drawable/ini" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginTop="10dp"
                            android:text="@string/satu" />

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/dua"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    app:cardBackgroundColor="@color/colorWhite"
                    app:cardCornerRadius="4dp"
                    android:layout_margin="10dp">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_gravity="center">

                        <ImageView
                            android:layout_width="100dp"
                            android:layout_height="100dp"
                            android:src="@drawable/ini"
                            android:layout_gravity="center"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/dua"
                            android:layout_marginTop="10dp"
                            android:layout_gravity="center"/>

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/tiga"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    app:cardBackgroundColor="@color/colorWhite"
                    app:cardCornerRadius="4dp"
                    android:layout_margin="10dp">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_gravity="center">

                        <ImageView
                            android:layout_width="100dp"
                            android:layout_height="100dp"
                            android:src="@drawable/ini"
                            android:layout_gravity="center"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/tiga"
                            android:layout_marginTop="10dp"
                            android:layout_gravity="center"/>

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/empat"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    app:cardBackgroundColor="@color/colorWhite"
                    app:cardCornerRadius="4dp"
                    android:layout_margin="10dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_gravity="center">

                    <ImageView
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:src="@drawable/ini"
                        android:layout_gravity="center"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/empat"
                        android:layout_marginTop="10dp"
                        android:layout_gravity="center"/>

                </LinearLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/lima"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    app:cardBackgroundColor="@color/colorWhite"
                    app:cardCornerRadius="4dp"
                    android:layout_margin="10dp">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_gravity="center">

                        <ImageView
                            android:layout_width="100dp"
                            android:layout_height="100dp"
                            android:src="@drawable/ini"
                            android:layout_gravity="center"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/lima"
                            android:layout_marginTop="10dp"
                            android:layout_gravity="center"/>

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/enam"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    app:cardBackgroundColor="@color/colorWhite"
                    app:cardCornerRadius="4dp"
                    android:layout_margin="10dp">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_gravity="center">

                        <ImageView
                            android:layout_width="100dp"
                            android:layout_height="100dp"
                            android:src="@drawable/ini"
                            android:layout_gravity="center"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/enam"
                            android:layout_marginTop="10dp"
                            android:layout_gravity="center"/>

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/tujuh"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    app:cardBackgroundColor="@color/colorWhite"
                    app:cardCornerRadius="4dp"
                    android:layout_margin="10dp">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_gravity="center">

                        <ImageView
                            android:layout_width="100dp"
                            android:layout_height="100dp"
                            android:src="@drawable/ini"
                            android:layout_gravity="center"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/tujuh"
                            android:layout_marginTop="10dp"
                            android:layout_gravity="center"/>

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/delapan"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    app:cardBackgroundColor="@color/colorWhite"
                    app:cardCornerRadius="4dp"
                    android:layout_margin="10dp">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_gravity="center">

                        <ImageView
                            android:layout_width="100dp"
                            android:layout_height="100dp"
                            android:src="@drawable/ini"
                            android:layout_gravity="center"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/delapan"
                            android:layout_marginTop="10dp"
                            android:layout_gravity="center"/>

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/sembilan"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    app:cardBackgroundColor="@color/colorWhite"
                    app:cardCornerRadius="4dp"
                    android:layout_margin="10dp">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_gravity="center">

                        <ImageView
                            android:layout_width="100dp"
                            android:layout_height="100dp"
                            android:src="@drawable/ini"
                            android:layout_gravity="center"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/sembilan"
                            android:layout_marginTop="10dp"
                            android:layout_gravity="center"/>

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/sepuluh"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    app:cardBackgroundColor="@color/colorWhite"
                    app:cardCornerRadius="4dp"
                    android:layout_margin="10dp">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_gravity="center">

                        <ImageView
                            android:layout_width="100dp"
                            android:layout_height="100dp"
                            android:src="@drawable/ini"
                            android:layout_gravity="center"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/sepuluh"
                            android:layout_marginTop="10dp"
                            android:layout_gravity="center"/>

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/sebelas"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    app:cardBackgroundColor="@color/colorWhite"
                    app:cardCornerRadius="4dp"
                    android:layout_margin="10dp">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_gravity="center">

                        <ImageView
                            android:layout_width="100dp"
                            android:layout_height="100dp"
                            android:src="@drawable/ini"
                            android:layout_gravity="center"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/sebelas"
                            android:layout_marginTop="10dp"
                            android:layout_gravity="center"/>

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/duabelas"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    app:cardBackgroundColor="@color/colorWhite"
                    app:cardCornerRadius="4dp"
                    android:layout_margin="10dp">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_gravity="center">

                        <ImageView
                            android:layout_width="100dp"
                            android:layout_height="100dp"
                            android:src="@drawable/ini"
                            android:layout_gravity="center"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/duabelas"
                            android:layout_marginTop="10dp"
                            android:layout_gravity="center"/>

                    </LinearLayout>

                </androidx.cardview.widget.CardView>


            </GridLayout>

        </RelativeLayout>

    </ScrollView>

</FrameLayout>